@@ -2,13 +2,15 @@ EXTLIB=../../mtcvs/extlib-dev
 SWFLIB=../../mtcvs/swflib
 EXTC=../../mtcvs/extc
 NEKO=../neko
-FILES=$(EXTLIB)/*.ml* -n $(EXTLIB)/install.ml $(SWFLIB)/*.ml* $(EXTC)/extc.ml* $(NEKO)/libs/include/ocaml/*.ml* *.ml*
+XML=../../mtcvs/xml-light
+LIBS_SRC=$(EXTLIB)/*.ml* -n $(EXTLIB)/install.ml $(SWFLIB)/*.ml* $(EXTC)/extc.ml* $(XML)/*.ml* -n $(XML)/test.ml
+SRC=$(NEKO)/libs/include/ocaml/*.ml* *.ml*
 LIBS=unix.cmxa
 FLAGS=-o haxe -pp camlp4o -lp "-cclib extc_stubs.o -cclib -lz"
 
 all:
 	ocamlc -c $(EXTC)/extc_stubs.c
-	ocamake $(FLAGS) $(FILES) $(LIBS)
+	ocamake $(FLAGS) $(LIBS_SRC) $(SRC) $(LIBS)
 
 universal: clean_haxe all
 	mv haxe haxe.intel
@@ -20,8 +22,8 @@ clean_haxe:
 
 tools:
 	(cd std/tools/haxedoc && haxe haxedoc.hxml && cp haxedoc ../../..)
-	(cd std/tools/haxelib && haxe haxelib.hxml && cp haxelib ../../..) 
+	(cd std/tools/haxelib && haxe haxelib.hxml && cp haxelib ../../..)
 
 clean:
-	ocamake $(FLAGS) -clean $(FILES) $(LIBS)
+	ocamake $(FLAGS) -clean $(LIBS_SRC) $(SRC) $(LIBS)
 	rm -rf extc_stubs.o
