@@ -80,6 +80,7 @@ import haxe.rtti.XmlParser;
 
 import haxe.xml.Check;
 import haxe.xml.Fast;
+import haxe.xml.Proxy;
 
 import haxe.unit.TestCase;
 import haxe.unit.TestResult;
@@ -90,6 +91,7 @@ import haxe.unit.TestStatus;
 
 // generated by haxe
 import flash.Boot;
+import flash.Event;
 import flash.Lib;
 import flash.FlashXml__;
 import flash.accessibility.Accessibility;
@@ -298,6 +300,7 @@ import flash.system.Security;
 
 // generated by haxe
 import flash9.Boot;
+import flash9.Event;
 import flash9.Lib;
 import flash9.FlashXml__;
 import flash9.accessibility.Accessibility;
@@ -518,6 +521,7 @@ import neko.io.Logger;
 import neko.io.Multiple;
 import neko.io.Output;
 import neko.io.Path;
+import neko.io.Process;
 import neko.io.StringInput;
 import neko.io.StringOutput;
 
@@ -548,6 +552,7 @@ import neko.vm.Loader;
 import neko.vm.Module;
 import neko.vm.Thread;
 import neko.vm.Lock;
+import neko.vm.Ui;
 
 #end
 
